# egfr_binder_rd2

./: .gitignore  metrics.csv  pyproject.toml  selected_variants_metrics_gen_1_20241102_204508.csv
notebooks/: approach.MD  dataset.ipynb  fold.ipynb  get_msa.ipynb  inference.ipynb  interface.ipynb  manual_samples.ipynb  results.csv  selection.ipynb  test_bt_model.ipynb  test_partial_ensemble.ipynb  test_sampler.ipynb
pymol/: 8HGO_trimmed.cif  annotated_8HGO.pse
src/egfr_binder_rd2/: __init__.py  binding_dataset.py  bt.py  datamodule.py  dataset.py  esm2_pll.py  esm_regression_expert.py  evoprotgrad.py  expression_dataset.py  fitness.py  fold.py  fold2.py  get_models.py  move_pdbs.py  run_setup_databases.py  sampler.py  setup_databases.sh  solubility.py  transfer_files.py  utils.py
src/egfr_binder_rd2/data/: melted_residue_distances.csv
src/egfr_binder_rd2/data/fastas/: rd1.fasta
