[project]
name = "egfr-binder-rd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython==1.81",
    "biotite>=1.0.1",
    "ipykernel>=6.29.5",
    "modal>=0.64.232",
    "polaris-lib>=0.8.6",
    "transformers>=4.46.0",
    "wandb>=0.18.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
